--- a/index.html
+++ b/index.html
@@ -406,14 +406,14 @@ Presented strategic plan on how to leverage private funds, investment and mentor
 
 <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><img src="images/blank.png" width="281px" height="191px" /><center><h4>Holding a space for another Frame</h4></center></a></li>
+                  <li data-panel="panel-19" class="item" data-id="id-17" data-tag="website" data-type="web"><img src="images/blank.png" width="281px" height="191px" /><center><h4>Holding a space for another Frame</h4></center></a></li>
                 </ul>
                 <!--<p>Holder</p>-->    
               </div><!-- /span4 -->
 
 <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-18" class="item" data-id="id-18" data-tag="map" data-type="map"><a href="#"><img src="images/Oakland_Redlining.png" width="281px" height="191px" /><center><p>Contemporary Impact of "Redlining" in Oakland</p></center></a></li>
+                  <li data-panel="panel-17" class="item" data-id="id-18" data-tag="map" data-type="map"><a href="#"><img src="images/Oakland_Redlining.png" width="281px" height="191px" /><center><p>Contemporary Impact of "Redlining" in Oakland</p></center></a></li>
                 </ul>
                 <!--<p>Contemporary Impact of "Redlining" in Oakland</p>-->  
               </div><!-- /span4 -->
@@ -427,14 +427,14 @@ Presented strategic plan on how to leverage private funds, investment and mentor
 
  <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-18" class="item" data-id="id-18" data-tag="website" data-type="web"><img src="images/blank.png" width="281px" height="191px" /><center><h4>Holding a space for another Frame</h4></center></a></li>
+                  <li data-panel="panel-19" class="item" data-id="id-18" data-tag="website" data-type="web"><img src="images/blank.png" width="281px" height="191px" /><center><h4>Holding a space for another Frame</h4></center></a></li>
                 </ul>
                 <!--<p>Holder</p>-->    
               </div><!-- /span4 -->
 
 <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-18" class="item" data-id="id-18" data-tag="website" data-type="web"><img src="images/blank.png" width="281px" height="191px" /><center><h4>Holding a space for another Frame</h4></center></a></li>
+                  <li data-panel="panel-19" class="item" data-id="id-18" data-tag="website" data-type="web"><img src="images/blank.png" width="281px" height="191px" /><center><h4>Holding a space for another Frame</h4></center></a></li>
                 </ul>
                 <!--<p>Holder</p>-->    
               </div><!-- /span4 -->
@@ -455,14 +455,14 @@ Presented strategic plan on how to leverage private funds, investment and mentor
 
 <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-18" class="item" data-id="id-18" data-tag="website" data-type="web"><img src="images/blank.png" width="281px" height="191px" /><center><h4>Holding a space for another Frame</h4></center></a></li>
+                  <li data-panel="panel-19" class="item" data-id="id-18" data-tag="website" data-type="web"><img src="images/blank.png" width="281px" height="191px" /><center><h4>Holding a space for another Frame</h4></center></a></li>
                 </ul>
                 <!--<p>Holder</p>-->    
               </div><!-- /span4 -->
 
 <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-18" class="item" data-id="id-18" data-tag="website" data-type="web"><img src="images/blank.png" width="281px" height="191px" /><center><h4>Holding a space for another Frame</h4></center></a></li>
+                  <li data-panel="panel-19" class="item" data-id="id-18" data-tag="website" data-type="web"><img src="images/blank.png" width="281px" height="191px" /><center><h4>Holding a space for another Frame</h4></center></a></li>
                 </ul>
                 <!--<p>Holder</p>-->    
               </div><!-- /span4 -->
@@ -483,14 +483,14 @@ Presented strategic plan on how to leverage private funds, investment and mentor
 
 <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-18" class="item" data-id="id-18" data-tag="website" data-type="web"><img src="images/blank.png" width="281px" height="191px" /><center><h4>Holding a space for another Frame</h4></center></a></li>
+                  <li data-panel="panel-19" class="item" data-id="id-18" data-tag="website" data-type="web"><img src="images/blank.png" width="281px" height="191px" /><center><h4>Holding a space for another Frame</h4></center></a></li>
                 </ul>
                 <!--<p>Holder</p>-->    
               </div><!-- /span4 -->
 
 <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-18" class="item" data-id="id-18" data-tag="website" data-type="web"><img src="images/blank.png" width="281px" height="191px" /><center><h4>Holding a space for another Frame</h4></center></a></li>
+                  <li data-panel="panel-19" class="item" data-id="id-18" data-tag="website" data-type="web"><img src="images/blank.png" width="281px" height="191px" /><center><h4>Holding a space for another Frame</h4></center></a></li>
                 </ul>
                 <!--<p>Holder</p>-->    
               </div><!-- /span4 -->   
@@ -504,7 +504,7 @@ Presented strategic plan on how to leverage private funds, investment and mentor
 
 <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-18" class="item" data-id="id-18" data-tag="website" data-type="web"><img src="images/blank.png" width="281px" height="191px" /><center><h4>Holding a space for another Frame</h4></center></a></li>
+                  <li data-panel="panel-19" class="item" data-id="id-18" data-tag="website" data-type="web"><img src="images/blank.png" width="281px" height="191px" /><center><h4>Holding a space for another Frame</h4></center></a></li>
                 </ul>
                 <!--<p>Holder</p>-->    
               </div><!-- /span4 -->
@@ -988,12 +988,12 @@ frameborder="0" scrolling="no"></iframe></div>
               <!--<img src="images/VITASite.png" />-->
               <!--<br />-->
 <div><iframe width="100%" height="450px" frameborder="0" src="http://www.arcgis.com/apps/CompareAnalysis/index.html?appid=7ab9fe2121fb40f39144d44dbe8ce053" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe></div>
-              <h4>Project Overview / <a href="  "> Full Report </a></h4>
-              <p>City of Oakland, CA Voting</p>
+              <h4>Project Overview / <a href="https://www.academia.edu/27692954/The_Election_of_Libby_Schaaf_and_What_the_Most_Recent_Mayoral_Elections_Demonstrate_About_Elections_in_the_United_States_of_America"> Full Report </a></h4>
+              <p>City of Oakland California Voting</p>
               <h4>Project Details:</h4>
               <p>An comparative examination of the mayoral elections in the City of Oakland in the years 2010 and 2014.  We looked at how the results of these elections ended up with a different public sentiment for each mayor.<br>
                 We used this example to examine that elections say about the voting public and then recommend steps that can be taken to improve how elections are conducted in the United States without greatly increasing the cost of elections.
-.<a href="  ">See Full DRAFT Report </a></p>
+.<a href="https://www.academia.edu/27692954/The_Election_of_Libby_Schaaf_and_What_the_Most_Recent_Mayoral_Elections_Demonstrate_About_Elections_in_the_United_States_of_America">See Full Report </a></p>
               </div><!-- /span8 -->
             </div><!-- /row-fluid --> 
           </div><!-- /panel14 -->
@@ -1042,6 +1042,7 @@ frameborder="0" scrolling="no"></iframe></div>
             </div><!-- /row-fluid --> 
           </div><!-- /panel17 -->
           
+
 					<nav>
 						<span class="bl-next-work">&gt; Next Project</span>
 						<span class="bl-icon bl-icon-close"></span>
