--- a/index.html
+++ b/index.html
@@ -1033,11 +1033,11 @@ frameborder="0" scrolling="no"></iframe></div>
               <!--<img src="images/VITASite.png" />-->
               <!--<br />-->
 <div><iframe width="100%" height="450px" frameborder="0" src="http://www.arcgis.com/apps/View/index.html?appid=fb386c307bc14bf6a83484ee2b451889" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe></div>
-              <h4>Project Overview / <a href="https://www.academia.edu/30834688/Present_day_Impact_of_the_1937_Home_Owners_Loan_Corporation_Maps_A_Case_Study_of_the_City_of_Oakland_California_--_Did_Addressing_A_Past_Housing_Crisis_Give_a_Biased_Shape_to_Current_Patterns"> Full Report </a></h4>
+              <h4>Project Overview / <a href="https://www.academia.edu/30834688/Present_day_Impact_of_the_1937_Home_Owners_Loan_Corporation_Maps_A_Case_Study_of_the_City_of_Oakland_California_--_Did_Addressing_A_Past_Housing_Crisis_Give_a_Biased_Shape_to_Current_Patterns"> Full Report </a> / <a href="http://www.arcgis.com/apps/View/index.html?appid=fb386c307bc14bf6a83484ee2b451889"> Full Map </a></h4>
               <p>HOLC Redlining & Present-Day Patterns</p>
               <h4>Project Details:</h4>
               <p>A determination of the correlation between the 1937 Home Owners' Loan Corporation (HOLC) "Redlining" map and current housing and population patterns in the City of Oakland, CA. The biased policies and programs of the past continue to have an impact on modern planning issues. 
-.<a href="https://www.academia.edu/30834688/Present_day_Impact_of_the_1937_Home_Owners_Loan_Corporation_Maps_A_Case_Study_of_the_City_of_Oakland_California_--_Did_Addressing_A_Past_Housing_Crisis_Give_a_Biased_Shape_to_Current_Patterns">See Full Report </a></p>
+.<a href="https://www.academia.edu/30834688/Present_day_Impact_of_the_1937_Home_Owners_Loan_Corporation_Maps_A_Case_Study_of_the_City_of_Oakland_California_--_Did_Addressing_A_Past_Housing_Crisis_Give_a_Biased_Shape_to_Current_Patterns">See Full Report </a> / <a href="http://www.arcgis.com/apps/View/index.html?appid=fb386c307bc14bf6a83484ee2b451889"> Full Map </a></p>
               </div><!-- /span8 -->
             </div><!-- /row-fluid --> 
           </div><!-- /panel17 -->
