--- a/index.html
+++ b/index.html
@@ -441,9 +441,9 @@ Presented strategic plan on how to leverage private funds, investment and mentor
 
 <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-13" class="item" data-id="id-13" data-tag="website" data-type="map"><a href="#"><img src="images/Dasymetric_SidebySide.png" width="281px" height="191px" /><center><p>Mosswood Park Access</p></center></a></li>
+                  <li data-panel="panel-14" class="item" data-id="id-14" data-tag="map" data-type="map"><a href="#"><img src="images/Dasymetric_SidebySide.png" width="281px" height="191px" /><center><p>Mosswood Park Access</p></center></a></li>
                 </ul>
-                <!--<p>Mosswood Park Access</p>-->    
+                <!--<p>Mosswood Park Access</p>-->  
               </div><!-- /span4 -->
 
 <div class="span4">
