--- a/index.html
+++ b/index.html
@@ -411,11 +411,13 @@ Presented strategic plan on how to leverage private funds, investment and mentor
                 <!--<p>Holder</p>-->    
               </div><!-- /span4 -->
 
+
+
 <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-17" class="item" data-id="id-18" data-tag="map" data-type="map"><a href="#"><img src="images/Oakland_Redlining.png" width="281px" height="191px" /><center><p>Contemporary Impact of "Redlining" in Oakland</p></center></a></li>
+                  <li data-panel="panel-13" class="item" data-id="id-13" data-tag="map" data-type="map"><a href="#"><img src="images/Dasymetric_SidebySide.png" width="281px" height="191px" /><center><p>Mosswood Park Access</p></center></a></li>
                 </ul>
-                <!--<p>Contemporary Impact of "Redlining" in Oakland</p>-->  
+                <!--<p>Mosswood Park Access</p>-->  
               </div><!-- /span4 -->
 
 <div class="span4">
@@ -441,16 +443,16 @@ Presented strategic plan on how to leverage private funds, investment and mentor
 
 <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-14" class="item" data-id="id-14" data-tag="map" data-type="map"><a href="#"><img src="images/Dasymetric_SidebySide.png" width="281px" height="191px" /><center><p>Mosswood Park Access</p></center></a></li>
+                  <li data-panel="panel-12" class="item" data-id="id-12" data-tag="website" data-type="map"><a href="#"><img src="images/Miley_Map.png" width="281px" height="191px" /><center><p>4th Supervisoral District</p></center></a></li>
                 </ul>
-                <!--<p>Mosswood Park Access</p>-->  
+                <!--<p>Miley Maps</p>-->    
               </div><!-- /span4 -->
 
 <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-12" class="item" data-id="id-12" data-tag="website" data-type="map"><a href="#"><img src="images/Miley_Map.png" width="281px" height="191px" /><center><p>4th Supervisoral District</p></center></a></li>
+                  <li data-panel="panel-17" class="item" data-id="id-18" data-tag="map" data-type="map"><a href="#"><img src="images/Oakland_Redlining.png" width="281px" height="191px" /><center><p>Contemporary Impact of "Redlining" in Oakland</p></center></a></li>
                 </ul>
-                <!--<p>Miley Maps</p>-->    
+                <!--<p>Contemporary Impact of "Redlining" in Oakland</p>-->  
               </div><!-- /span4 -->
 
 <div class="span4">
@@ -469,7 +471,7 @@ Presented strategic plan on how to leverage private funds, investment and mentor
 
   <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-16" class="item" data-id="id-16" data-tag="map" data-type="map"><a href="#"><img src="images/Collision_Story.png" width="281px" height="191px" /><center><p>The Story of Reported Bicycle Collions in San Francisco</p></center></a></li>
+                  <li data-panel="panel-16" class="item" data-id="id-16" data-tag="map" data-type="map"><a href="#"><img src="images/Collision_Story.png" width="281px" height="191px" /><center><p>Reported Bicycle Collisions in San Francisco</p></center></a></li>
                 </ul>
                 <!--<p>Story of Bike Collisions</p>-->    
               </div><!-- /span4 -->
