--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@ Presented strategic plan on how to leverage private funds, investment and mentor
 
 <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-17" class="item" data-id="id-18" data-tag="map" data-type="map"><a href="#"><img src="images/Oakland_Redlining.png" width="281px" height="191px" /><center><p>Contemporary Impact of "Redlining" in Oakland</p></center></a></li>
+                  <li data-panel="panel-17" class="item" data-id="id-18" data-tag="map" data-type="map"><a href="#"><img src="images/Oakland_Redlining.png" width="281px" height="191px" /><center><p>Impact of "Redlining" Oakland</p></center></a></li>
                 </ul>
                 <!--<p>Contemporary Impact of "Redlining" in Oakland</p>-->  
               </div><!-- /span4 -->
@@ -476,14 +476,14 @@ Presented strategic plan on how to leverage private funds, investment and mentor
 
   <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-16" class="item" data-id="id-16" data-tag="map" data-type="map"><a href="#"><img src="images/Collision_Story.png" width="281px" height="191px" /><center><p>Reported Bicycle Collisions in San Francisco</p></center></a></li>
+                  <li data-panel="panel-16" class="item" data-id="id-16" data-tag="map" data-type="map"><a href="#"><img src="images/Collision_Story.png" width="281px" height="191px" /><center><p>Bike Collisions San Francisco</p></center></a></li>
                 </ul>
                 <!--<p>Story of Bike Collisions</p>-->
               </div><!-- /span4 -->
 
 <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-10" class="item" data-id="id-10" data-tag="map" data-type="map"><a href="#"><img src="images/Oakland_Impact_Zone_Parcels.jpg" width="281px" height="167px" /><center><p>Potential Crude Oil Spill in the City of Oakland</p></center></a></li>
+                  <li data-panel="panel-10" class="item" data-id="id-10" data-tag="map" data-type="map"><a href="#"><img src="images/Oakland_Impact_Zone_Parcels.jpg" width="281px" height="167px" /><center><p>Crude Oil Spill Oakland</p></center></a></li>
                 </ul>
                 <!--<p>Potential Crude Oil Spill</p>-->
               </div><!-- /span4 -->
