--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@ Presented strategic plan on how to leverage private funds, investment and mentor
 
  <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-19" class="item" data-id="id-18" data-tag="website" data-type="web"><img src="images/blank.png" width="281px" height="191px" /><center><h4>Holding a space for another Frame</h4></center></a></li>
+                  <li data-panel="panel-18" class="item" data-id="id-18" data-tag="website" data-type="web"><img src="images/SF_Evictions_Dashboard.png" width="281px" height="191px" /><center><h4>20 Years of SF Evictions</h4></center></a></li>
                 </ul>
                 <!--<p>Holder</p>-->    
               </div><!-- /span4 -->
@@ -1042,6 +1042,20 @@ frameborder="0" scrolling="no"></iframe></div>
             </div><!-- /row-fluid --> 
           </div><!-- /panel17 -->
           
+          <div data-panel="panel-18">
+            <div class="row-fluid">
+              <div class="span8 offset2 tweak">
+              <!--<img src="images/VITASite.png" />-->
+              <!--<br />-->
+<div><iframe width="100%" height="450px" frameborder="0" src="https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;SF&#47;SFEvictionsbyNeighborhood1997-2016&#47;Dashboard1&#47;1_rss.png' style='border: none" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe></div>
+              <h4>Project Overview / <a href="https://www.academia.edu/30834688/Present_day_Impact_of_the_1937_Home_Owners_Loan_Corporation_Maps_A_Case_Study_of_the_City_of_Oakland_California_--_Did_Addressing_A_Past_Housing_Crisis_Give_a_Biased_Shape_to_Current_Patterns"> Full Report </a> / <a href="https://public.tableau.com/views/SFEvictionsbyNeighborhood1997-2016/Dashboard1?:embed=y&:display_count=yes&publish=yes"> Full Dashboard </a></h4>
+              <p>HOLC Redlining & Present-Day Patterns</p>
+              <h4>Project Details:</h4>
+              <p>A determination of the correlation between the 1937 Home Owners' Loan Corporation (HOLC) "Redlining" map and current housing and population patterns in the City of Oakland, CA. The biased policies and programs of the past continue to have an impact on modern planning issues. 
+.<a href="https://www.academia.edu/30834688/Present_day_Impact_of_the_1937_Home_Owners_Loan_Corporation_Maps_A_Case_Study_of_the_City_of_Oakland_California_--_Did_Addressing_A_Past_Housing_Crisis_Give_a_Biased_Shape_to_Current_Patterns">See Full Report </a> / <a href="http://www.arcgis.com/apps/View/index.html?appid=fb386c307bc14bf6a83484ee2b451889"> Full Map </a></p>
+              </div><!-- /span8 -->
+            </div><!-- /row-fluid --> 
+          </div><!-- /panel17 -->
 
 					<nav>
 						<span class="bl-next-work">&gt; Next Project</span>
