--- a/index.html
+++ b/index.html
@@ -551,36 +551,36 @@ Presented strategic plan on how to leverage private funds, investment and mentor
 									<!--<img src="images/collab.jpg" alt="" />-->
 								<article>
 									<h3>Bicis Del Pueblo</h3>
-									<p>Bicycle Mechanic Course that focuses on bike mechanic skills, youth development, political education, and environmental justice.  <a href="#">Read more</a></p>
+									<p>Bicycle Mechanic Course that focuses on bike mechanic skills, youth development, political education, and environmental justice.</p>
 									<p>I was responsible of course design and piloting the program and the subsequent monitoring and evaluation.</p>
 								</article>
 								<article>
 									<h3>University of California Los Angeles 2011</h3>
-									<p>Instructor, Geographic Information Systems as a spatial analysis research tool, Department of Urban Planning, University of California Los Angeles, July 2011 - August 2011<a href="#">Read more</a></p>
-									<p>I was responsible for updating the established curriculum for the introductory GIS mapping course.<a href="#">Read more</a></p>
+									<p>Instructor, Geographic Information Systems as a spatial analysis research tool, Department of Urban Planning, University of California Los Angeles, July 2011 - August 2011</p>
+									<p>I was responsible for updating the established curriculum for the introductory GIS mapping course.
 								</article>
 								<article>
 									<h3>University of California Los Angeles 2009-2011</h3>
-									<p>Teaching Assistant: Introduction to Geographic Information Systems<a href="#">Read more</a></p>
-									<p>I was responsible for updating the established curriculum for the introductory GIS mapping course.<a href="#">Read more</a></p>
+									<p>Teaching Assistant: Introduction to Geographic Information Systems
+									<p>I was responsible for updating the established curriculum for the introductory GIS mapping course.</p>
 								</article>
 
 								<article>
 									<h3>Instituto Santo Tomas de Aquino Camasca Intibuca, Honduras 2004-2005</h3>
-									<p>Instructor, Project Management Course<a href="#">Read more</a></p>
-									<p>I taught a course of project design and management. Students were responsible for conducted a year long practicum that culminated in the completion of a development project.<a href="#">Read more</a></p>
+									<p>Instructor, Project Management Course</p>
+									<p>I taught a course of project design and management. Students were responsible for conducted a year long practicum that culminated in the completion of a development project.</p>
 								</article>
 
 								<article>
 									<h3>Instituto Santo Tomas de Aquino Camasca Intibuca, Honduras 2004-2005</h3>
-									<p>Instructor, Citizen Participation Course<a href="#">Read more</a></p>
-									<p>Worked with students to provide them with the necessary tools to conduct citizen participation charrettes to rural populations.<a href="#">Read more</a></p>
+									<p>Instructor, Citizen Participation Course</p>
+									<p>Worked with students to provide them with the necessary tools to conduct citizen participation charrettes to rural populations.</p>
 								</article>
 
 								<article>
 									<h3>Food and Agriculture Organization of the United Nations, Honduras, 2005</h3>
-									<p>Trainer, Geographic Positioning System (GPS) and Geographic Information System (GIS), <a href="#">Read more</a></p>
-									<p>I was responsible for designing GIS manual in Spanish, while training staff to conduct field mapping research<a href="#">Read more</a></p>
+									<p>Trainer, Geographic Positioning System (GPS) and Geographic Information System (GIS),</p>
+									<p>I was responsible for designing GIS manual in Spanish, while training staff to conduct field mapping research</p>
 								</article>
 
 								<hr />
