--- a/slider.html
+++ b/slider.html
@@ -1,3 +1,6 @@
+<head>
+<link rel="stylesheet" type="text/css" href="slider.css">
+</head>
 <base href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/">
 <div id="slider">
 <figure>
