images and captions
added for slider

--- a/slider2.html
+++ b/slider2.html
@@ -45,24 +45,36 @@ figure.slider figure figcaption {
 <div id="captioned-gallery">
   <figure class="slider">
     <figure>
-      <img src="hobbiton-lake.jpg" alt>
-      <figcaption>Hobbiton, New Zealand</figcaption>
+      <img src="img/ste-catherine-car-free.jpg" alt>
+      <figcaption>Lawn on a Street</figcaption>
     </figure>
     <figure>
-      <img src="wanaka-drowned-tree.jpg" alt>
-      <figcaption>Wanaka, New Zealand</figcaption>
+      <img src="img/Pedestrian_Street6.jpg" alt>
+      <figcaption>Pedestrian Street Concept</figcaption>
     </figure>
     <figure>
-      <img src="utah-peak.jpg" alt>
-      <figcaption>Utah, United States</figcaption>
+      <img src="img/broome-street-block-party.jpg" alt>
+      <figcaption>Block Party</figcaption>
     </figure>
     <figure>
-      <img src="bryce-canyon-utah.jpg" alt>
-      <figcaption>Bryce Canyon, Utah, United States</figcaption>
+      <img src="img/First_Friday.jpg" alt>
+      <figcaption>Art Festival</figcaption>
     </figure>
+
     <figure>
-      <img src="hobbiton-lake.jpg" alt>
-      <figcaption>Hobbiton, New Zealand</figcaption>
+      <img src="img/NYC_NYCDOT_4.jpg" alt>
+      <figcaption>Rethinking the Streetscape</figcaption>
     </figure>
+
+    <figure>
+      <img src="img/street_concert.jpg" alt>
+      <figcaption>Street Music</figcaption>
+    </figure>
+
+    <figure>
+      <img src="img/StreetFoodFest.jpg" alt>
+      <figcaption>Pop-ups and Festivals</figcaption>
+    </figure>
+
   </figure>
 </div>
