--- a/slider2.html
+++ b/slider2.html
@@ -41,7 +41,8 @@ figure.slider figure figcaption {
 </style>
 </head>
 
-<base href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/">
+<!--<base href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/">-->
+<base href="http://www.naulston.com">
 <div id="captioned-gallery">
   <figure class="slider">
     <figure>
