--- a/slider2.html
+++ b/slider2.html
@@ -16,27 +16,39 @@
   box-sizing: border-box;
 }
 body, figure { 
-  margin: 0; background: #101010;
+  margin: 0;
+  background: #101010;
   font-family: Istok Web, sans-serif;
   font-weight: 100;
 }
 div#captioned-gallery { 
-  width: 100%; overflow: hidden; 
+  width: 100%;
+  overflow: hidden; 
 }
 figure.slider { 
   position: relative; width: 500%;
   font-size: 0; animation: 30s slidy infinite; 
 }
 figure.slider figure { 
-  width: 20%; height: auto;
-  display: inline-block;  position: inherit; 
+  width: 20%;
+  height: auto;
+  display: inline-block; 
+  position: inherit; 
 }
-figure.slider img { width: 100%; height: auto; }
+figure.slider img { 
+  width: 100%;
+  height: 100%;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
 figure.slider figure figcaption { 
   position: absolute; bottom: 0;
   background: rgba(0,0,0,0.4);
-  color: #fff; width: 100%;
-  font-size: 2rem; padding: .6rem; 
+  color: #fff; 
+  width: 100%;
+  font-size: 2rem; 
+  padding: .6rem; 
 }
 </style>
 </head>
@@ -45,18 +57,22 @@ figure.slider figure figcaption {
 <base href="http://www.naulston.com">
 <div id="captioned-gallery">
   <figure class="slider">
+
     <figure>
       <img src="img/ste-catherine-car-free.jpg" alt>
       <figcaption>Lawn on a Street</figcaption>
     </figure>
+
     <figure>
       <img src="img/Pedestrian_Street6.jpg" alt>
       <figcaption>Pedestrian Street Concept</figcaption>
     </figure>
+
     <figure>
       <img src="img/broome-street-block-party.jpg" alt>
       <figcaption>Block Party</figcaption>
     </figure>
+
     <figure>
       <img src="img/First_Friday.jpg" alt>
       <figcaption>Art Festival</figcaption>
