--- a/slider2.html
+++ b/slider2.html
@@ -26,8 +26,9 @@ div#captioned-gallery {
   overflow: hidden; 
 }
 figure.slider { 
-  position: relative; width: 500%;
-  font-size: 0; animation: 30s slidy infinite; 
+  position: relative; 
+  width: 500%;
+  font-size: 0; animation: 25s slidy infinite; 
 }
 figure.slider figure { 
   width: 20%;
@@ -38,8 +39,9 @@ figure.slider figure {
 figure.slider img { 
   width: 100%;
   height: 100%;
-  padding-top: 5px;
+  padding-top: 25px;
   padding-bottom: 5px;
+  overflow: hidden;
 }
 
 figure.slider figure figcaption { 
