--- a/index.html
+++ b/index.html
@@ -554,11 +554,13 @@ Presented strategic plan on how to leverage private funds, investment and mentor
 									<p>Bicycle Mechanic Course that focuses on bike mechanic skills, youth development, political education, and environmental justice.</p>
 									<p>I was responsible of course design and piloting the program and the subsequent monitoring and evaluation.</p>
 								</article>
+                
 								<article>
 									<h3>University of California Los Angeles 2011</h3>
 									<p>Instructor, Geographic Information Systems as a spatial analysis research tool, Department of Urban Planning, University of California Los Angeles, July 2011 - August 2011</p>
 									<p>I was responsible for updating the established curriculum for the introductory GIS mapping course.
 								</article>
+
 								<article>
 									<h3>University of California Los Angeles 2009-2011</h3>
 									<p>Teaching Assistant: Introduction to Geographic Information Systems
@@ -974,10 +976,7 @@ frameborder="0" scrolling="no"></iframe></div>
               <h4>Project Overview / <a href="https://www.academia.edu/18944953"> Full Report </a></h4>
               <p>Mosswood Park Access</p>
               <h4>Project Details:</h4>
-              <p>To examine the existing assets and issues in three tracts that have been identified in the 4th Supervisorial District of Alameda County we created a series of maps that present the key indicators identified by Supervisor Miley. These highlighted tracts have been targeted for additional resources in order to improve the current outcomes. These interactive maps allow users to examine the current situation and deploy the appropriate resources.<br>
-
-              The data shows the City has yet to make an equitable investment in District 11 or the Excelsior neighborhood as it pertains to bike parking, racks, lanes, paths, routes, share stations, and other infrastructure projects.
-.<a href="https://www.academia.edu/18944953">See Full DRAFT Report </a></p>
+              <p>This is a side-by-side comparative view of four different population distribution models. Our Advanced Daysmetric Mapping Model is a 19-step process that we have shown to be a more accurate method to determine the population in custom geographic boundaries, such as, police beats, neighborhoods, and service areas. If you are interested in a more detailed version of this case study demonstrating the capabilities of the Advanced Dasymetric Mapping Model <a href="https://www.academia.edu/27614103/Advanced_Dasymetric_Mapping_Model_A_Case_Study_for_Park_Access">See Full Report. </a></p>
               </div><!-- /span8 -->
             </div><!-- /row-fluid --> 
           </div><!-- /panel13 -->
@@ -991,7 +990,7 @@ frameborder="0" scrolling="no"></iframe></div>
               <h4>Project Overview / <a href="https://www.academia.edu/27692954/The_Election_of_Libby_Schaaf_and_What_the_Most_Recent_Mayoral_Elections_Demonstrate_About_Elections_in_the_United_States_of_America"> Full Report </a></h4>
               <p>City of Oakland California Voting</p>
               <h4>Project Details:</h4>
-              <p>An comparative examination of the mayoral elections in the City of Oakland in the years 2010 and 2014.  We looked at how the results of these elections ended up with a different public sentiment for each mayor.<br>
+              <p>A comparative examination of the mayoral elections in the City of Oakland in the years 2010 and 2014.  We looked at how the results of these elections ended up with a different public sentiment for each mayor.<br>
                 We used this example to examine that elections say about the voting public and then recommend steps that can be taken to improve how elections are conducted in the United States without greatly increasing the cost of elections.
 .<a href="https://www.academia.edu/27692954/The_Election_of_Libby_Schaaf_and_What_the_Most_Recent_Mayoral_Elections_Demonstrate_About_Elections_in_the_United_States_of_America">See Full Report </a></p>
               </div><!-- /span8 -->
@@ -1047,11 +1046,11 @@ frameborder="0" scrolling="no"></iframe></div>
               <div class="span8 offset2 tweak">
               <!--<img src="images/VITASite.png" />-->
               <!--<br />-->
-<div><iframe width="100%" height="450px" frameborder="0" src="https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;SF&#47;SFEvictionsbyNeighborhood1997-2016&#47;Dashboard1&#47;1_rss.png' style='border: none" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe></div>
+<div><iframe width="100%" height="450px" frameborder="0" src="https://public.tableau.com/views/SFEvictionsbyNeighborhood1997-2016/Dashboard1?:showVizHome=no&:embed=true&publish=yes' style='border: none" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe></div>
               <h4>Project Overview / <a href="https://www.academia.edu/30834688/Present_day_Impact_of_the_1937_Home_Owners_Loan_Corporation_Maps_A_Case_Study_of_the_City_of_Oakland_California_--_Did_Addressing_A_Past_Housing_Crisis_Give_a_Biased_Shape_to_Current_Patterns"> Full Report </a> / <a href="https://public.tableau.com/views/SFEvictionsbyNeighborhood1997-2016/Dashboard1?:embed=y&:display_count=yes&publish=yes"> Full Dashboard </a></h4>
-              <p>HOLC Redlining & Present-Day Patterns</p>
+              <p>20 Years of Evitions</p>
               <h4>Project Details:</h4>
-              <p>A determination of the correlation between the 1937 Home Owners' Loan Corporation (HOLC) "Redlining" map and current housing and population patterns in the City of Oakland, CA. The biased policies and programs of the past continue to have an impact on modern planning issues. 
+              <p>This dashboard summaries 20 years of eviction data. Providing a data viz for the 5.5 units that were cleared of their occupants on a daily basis in San Francisco.  This viz is intended to give context to the major issue facing individuals and families as they try to identify any patterns in the use of evictions and neighborhood conversion. 
 .<a href="https://www.academia.edu/30834688/Present_day_Impact_of_the_1937_Home_Owners_Loan_Corporation_Maps_A_Case_Study_of_the_City_of_Oakland_California_--_Did_Addressing_A_Past_Housing_Crisis_Give_a_Biased_Shape_to_Current_Patterns">See Full Report </a> / <a href="http://www.arcgis.com/apps/View/index.html?appid=fb386c307bc14bf6a83484ee2b451889"> Full Map </a></p>
               </div><!-- /span8 -->
             </div><!-- /row-fluid --> 
